# chatcarve

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: locale-support.md  output-format.md
examples/: README.md  carve_demo.py  family-trip.txt
scripts/: smoke.sh
src/chatcarve/: __init__.py  __main__.py  cli.py  jsonl.py  linesplit.py  markdown.py  media.py  model.py  parser.py  system.py  textnorm.py  timestamp.py
tests/: conftest.py  test_cli.py  test_corpus.py  test_linesplit.py  test_media.py  test_parser.py  test_system.py  test_timestamp.py  test_writers.py
tests/corpus/: ambiguous-mdy-android.txt  ar-sa-ios.txt  de-de-android.txt  en-gb-ios.txt  en-us-android.txt  es-mx-android.txt  fr-fr-ios.txt  it-it-android.txt  ja-jp-ios.txt  ko-kr-ios.txt  nl-nl-android.txt  pt-br-android.txt  ru-ru-android.txt  tr-tr-android.txt  zh-tw-ios.txt
tests/corpus/expected/: ambiguous-mdy-android.jsonl  ar-sa-ios.jsonl  de-de-android.jsonl  en-gb-ios.jsonl  en-us-android.jsonl  es-mx-android.jsonl  fr-fr-ios.jsonl  it-it-android.jsonl  ja-jp-ios.jsonl  ko-kr-ios.jsonl  nl-nl-android.jsonl  pt-br-android.jsonl  ru-ru-android.jsonl  tr-tr-android.jsonl  zh-tw-ios.jsonl
