[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcarve"
version = "0.1.0"
description = "Parse WhatsApp chat exports into clean JSONL and Markdown, media links preserved — multi-locale timestamps and system messages handled, not assumed."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["whatsapp", "chat-export", "jsonl", "markdown", "parser", "archive", "i18n"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Filters",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
chatcarve = "chatcarve.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/chatcarve"
Repository = "https://github.com/JaydenCJ/chatcarve"
Issues = "https://github.com/JaydenCJ/chatcarve/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
